--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "file_management_app",
   "type": "module",
+  "name": "file_management_app",
   "version": "1.0.0",
   "description": "This app will allow users to perform basic file operations like listing, creating, reading, updating, and deleting files",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
     "start": "nodemon server.js"
   },
   "author": "Amer Hallaq",
@@ -18,7 +18,13 @@
     "express-validator": "^7.0.1",
     "express-zip": "^3.0.0",
     "fs-extra": "^11.2.0",
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "supertest": "^6.3.4"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.0",
+    "esm": "^3.2.25"
   }
 }
