--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,26 @@
-name: MAIN
+name: Run tests
 
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+
+  workflow_dispatch:
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm install
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.11
 
+      - name: Install Dependencies
+        run: npm ci
       - name: Run tests
         run: npm test
