--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
           node-version: 20.11
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
       - name: Run tests
         run: npm test
