--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-        working-directory: backend
+        working-directory: ./backend
       - name: Run tests
         run: npm test
+        
