--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         working-directory: ./backend
       - name: Run tests
         run: npm test
-        
+        working-directory: ./backend
